# USBLogger

./: README.md  config.ini  core_api_wrapper.py  generate_key_file.py  requirements.txt  usb_logger_win.py
USB_Logger_Windows/: requirements.txt
core_c/: CMakeLists.txt  monitoring.c
core_c/include/: core_api.h
core_c/src/: device_utils.c
gui/: gui.py  main.py
utils/: config.py  device.py  eject.py  logging_setup.py  summary.py
